// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValuesToRulerGrafanaRuleDTO should correctly convert rule form values 1`] = `
{
  "annotations": {
    "description": "",
    "runbook_url": "",
    "summary": "",
  },
  "for": "5m",
  "grafana_alert": {
    "condition": "A",
    "data": [],
    "exec_err_state": "Error",
    "is_paused": false,
    "no_data_state": "NoData",
    "title": "",
  },
  "labels": {
    "": "",
  },
}
`;

exports[`formValuesToRulerGrafanaRuleDTO should not save both instant and range type queries 1`] = `
{
  "annotations": {
    "description": "",
    "runbook_url": "",
    "summary": "",
  },
  "for": "5m",
  "grafana_alert": {
    "condition": "A",
    "data": [
      {
        "datasourceUid": "dsuid",
        "model": {
          "expr": "",
          "instant": false,
          "range": true,
          "refId": "A",
        },
        "queryType": "query",
        "refId": "A",
        "relativeTimeRange": {
          "from": 900,
          "to": 1000,
        },
      },
    ],
    "exec_err_state": "Error",
    "is_paused": false,
    "no_data_state": "NoData",
    "title": "",
  },
  "labels": {
    "": "",
  },
}
`;
